--- a/index.css
+++ b/index.css
@@ -63,6 +63,10 @@ button{
        background-color: #ffff3e;
        color: #ffff;
    }
+  .work-section{
+    background-color: #808080
+    color: #fffffff
+    }
    .white-section{
        background-color: #ffff;
        
