--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ button{
        color: #ffff;
    }
   .work-section{
-    background-color: black
+    background-color:#808080
     
     }
    .white-section{
