--- a/index.css
+++ b/index.css
@@ -64,9 +64,10 @@ button{
        color: #ffff;
    }
   .work-section{
-    background-color:#808080
+    background-color:#808080;
     
     }
+   
    .white-section{
        background-color: #ffff;
        
